[package]
name = "libgit"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.63" # TODO: Once we hit 1.84 or newer, we may want to remove Cargo.lock from
                      # version control. See https://lore.kernel.org/git/Z47jgK-oMjFRSslr@tapette.crustytoothpaste.net/


[lib]
path = "src/lib.rs"

[dependencies]
libgit-sys = { version = "0.1.0", path = "../libgit-sys" }

[build-dependencies]
autocfg = "1.4.0"
